--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: url('logo.JPG') no-repeat center center fixed;
+  background: url('logo-torneio-maribar-2025.jpg') no-repeat center center fixed;
   background-size: 80%;
   background-repeat: no-repeat;
   background-position: center;
@@ -286,4 +286,8 @@ footer .social-icons a:hover {
     flex-direction: column;
     align-items: center;
   }
+}
+.cartaz {
+  text-align: center;
+  margin: 20px 0;
 }
