--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,3 +33,7 @@
   margin-top: 15px;
   font-weight: bold;
 }
+.primeiro-sem-resultado {
+  background-color: #f0f8ff; /* ou qualquer outra cor de destaque */
+}
+
